@@ -4,10 +4,13 @@ import com.google.cloud.firestore.DocumentSnapshot;
 import com.google.cloud.firestore.Firestore;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.web.bind.annotation.*;
+import org.springframework.http.ResponseEntity;
 
-import java.util.List;
-import java.util.Map;
-import java.util.HashMap;
+import java.net.URI;
+import java.net.http.HttpClient;
+import java.net.http.HttpRequest;
+import java.net.http.HttpResponse;
+import java.util.*;
 
 @RestController
 @RequestMapping("/api/navigator")
@@ -16,119 +19,123 @@ public class NavigatorController {
     @Autowired
     private Firestore firestore;
 
-    // Create a new Navigator for a user
+    private static final String OSRM_API_BASE = "https://router.project-osrm.org/route/v1/driving/";
+
+    // Create a new Navigator for a profileId
     @PostMapping("/create")
-    public String createNavigator(@RequestBody Navigator navigator) {
+    public ResponseEntity<String> createNavigator(@RequestBody Navigator navigator) {
         try {
-            // Save the Navigator object to Firestore
             firestore.collection("navigators").document(navigator.getNavigatorId()).set(navigator);
-            return "Navigator created successfully!";
+            return ResponseEntity.ok("Navigator created successfully!");
         } catch (Exception e) {
-            return "Error creating navigator: " + e.getMessage();
+            return ResponseEntity.status(500).body("Error creating navigator: " + e.getMessage());
         }
     }
 
     // Get Navigator details by navigatorId
     @GetMapping("/details/{navigatorId}")
-    public Navigator getNavigator(@PathVariable String navigatorId) {
+    public ResponseEntity<Navigator> getNavigator(@PathVariable String navigatorId) {
         try {
-            // Retrieve the navigator document from Firestore
             DocumentSnapshot doc = firestore.collection("navigators").document(navigatorId).get().get();
-
             if (doc.exists()) {
-                return doc.toObject(Navigator.class);
+                return ResponseEntity.ok(doc.toObject(Navigator.class));
             } else {
-                throw new RuntimeException("Navigator not found for navigatorId: " + navigatorId);
+                return ResponseEntity.status(404).body(null);
             }
         } catch (Exception e) {
-            throw new RuntimeException("Error retrieving navigator: " + e.getMessage());
+            return ResponseEntity.status(500).body(null);
         }
     }
 
-    // Update Navigator's current location, nearby destinations, recommended routes, and attractions
+    // Update Navigator's location and other details
     @PutMapping("/update/{navigatorId}")
-    public String updateNavigator(@PathVariable String navigatorId, @RequestBody Navigator navigator) {
+    public ResponseEntity<String> updateNavigator(@PathVariable String navigatorId, @RequestBody Navigator navigator) {
         try {
-            // Prepare the updated Navigator data
             Map<String, Object> updatedData = new HashMap<>();
-            updatedData.put("currentLocation", navigator.getCurrentLocation());
+            updatedData.put("currentLatitude", navigator.getCurrentLatitude());
+            updatedData.put("currentLongitude", navigator.getCurrentLongitude());
             updatedData.put("nearbyDestinations", navigator.getNearbyDestinations());
             updatedData.put("recommendedRoutes", navigator.getRecommendedRoutes());
             updatedData.put("popularAttractions", navigator.getPopularAttractions());
 
-            // Update the document in Firestore
             firestore.collection("navigators").document(navigatorId).update(updatedData);
-            return "Navigator updated successfully!";
+            return ResponseEntity.ok("Navigator updated successfully!");
         } catch (Exception e) {
-            return "Error updating navigator: " + e.getMessage();
+            return ResponseEntity.status(500).body("Error updating navigator: " + e.getMessage());
         }
     }
 
-    // Delete a Navigator by navigatorId
+    // Get Directions using OSRM API
+    @GetMapping("/directions")
+    public ResponseEntity<Map<String, Object>> getDirections(
+            @RequestParam double startLat,
+            @RequestParam double startLng,
+            @RequestParam double destLat,
+            @RequestParam double destLng) {
+        try {
+            String url = OSRM_API_BASE + startLng + "," + startLat + ";" + destLng + "," + destLat + "?overview=full";
+
+            HttpClient client = HttpClient.newHttpClient();
+            HttpRequest request = HttpRequest.newBuilder()
+                    .uri(URI.create(url))
+                    .build();
+
+            HttpResponse<String> response = client.send(request, HttpResponse.BodyHandlers.ofString());
+
+            if (response.statusCode() == 200) {
+                Map<String, Object> result = Map.of(
+                        "status", "success",
+                        "directions", response.body()
+                );
+                return ResponseEntity.ok(result);
+            } else {
+                return ResponseEntity.status(500).body(Map.of("status", "error", "message", "Failed to fetch directions."));
+            }
+        } catch (Exception e) {
+            return ResponseEntity.status(500).body(Map.of("status", "error", "message", e.getMessage()));
+        }
+    }
+
+    // Delete Navigator by navigatorId
     @DeleteMapping("/delete/{navigatorId}")
-    public String deleteNavigator(@PathVariable String navigatorId) {
+    public ResponseEntity<String> deleteNavigator(@PathVariable String navigatorId) {
         try {
-            // Delete the navigator document from Firestore
             firestore.collection("navigators").document(navigatorId).delete();
-            return "Navigator deleted successfully!";
+            return ResponseEntity.ok("Navigator deleted successfully!");
         } catch (Exception e) {
-            return "Error deleting navigator: " + e.getMessage();
+            return ResponseEntity.status(500).body("Error deleting navigator: " + e.getMessage());
         }
     }
 
-    // Get the current location of the user (from the Navigator data)
-    @GetMapping("/current-location/{navigatorId}")
-    public String getCurrentLocation(@PathVariable String navigatorId) {
-        try {
-            DocumentSnapshot doc = firestore.collection("navigators").document(navigatorId).get().get();
-            if (doc.exists()) {
-                Navigator navigator = doc.toObject(Navigator.class);
-                return navigator.getCurrentLocation();
-            } else {
-                return "Navigator not found.";
-            }
-        } catch (Exception e) {
-            return "Error retrieving current location: " + e.getMessage();
-        }
-    }
-
-    // Get nearby destinations for the user
+    // Get nearby destinations for a specific user
     @GetMapping("/nearby-destinations/{navigatorId}")
-    public List<String> getNearbyDestinations(@PathVariable String navigatorId) {
+    public ResponseEntity<List<Location>> getNearbyDestinations(@PathVariable String navigatorId) {
         try {
             DocumentSnapshot doc = firestore.collection("navigators").document(navigatorId).get().get();
             if (doc.exists()) {
                 Navigator navigator = doc.toObject(Navigator.class);
-                return navigator.getNearbyDestinations();
+                return ResponseEntity.ok(navigator.getNearbyDestinations());
             } else {
-                return List.of("No destinations found.");
+                return ResponseEntity.status(404).body(Collections.emptyList());
             }
         } catch (Exception e) {
-            return List.of("Error retrieving destinations: " + e.getMessage());
+            return ResponseEntity.status(500).body(Collections.emptyList());
         }
     }
 
     // Get recommended routes for the user
     @GetMapping("/recommended-routes/{navigatorId}")
-    public List<String> getRecommendedRoutes(@PathVariable String navigatorId) {
+    public ResponseEntity<List<Route>> getRecommendedRoutes(@PathVariable String navigatorId) {
         try {
             DocumentSnapshot doc = firestore.collection("navigators").document(navigatorId).get().get();
             if (doc.exists()) {
                 Navigator navigator = doc.toObject(Navigator.class);
-                return navigator.getRecommendedRoutes();
+                return ResponseEntity.ok(navigator.getRecommendedRoutes());
             } else {
-                return List.of("No routes found.");
+                return ResponseEntity.status(404).body(Collections.emptyList());
             }
         } catch (Exception e) {
-            return List.of("Error retrieving recommended routes: " + e.getMessage());
+            return ResponseEntity.status(500).body(Collections.emptyList());
         }
     }
-
-    // Search for destinations based on a query
-    @GetMapping("/search")
-    public List<String> searchDestinations(@RequestParam String query) {
-        // Implement search logic here (e.g., fetch destinations based on the query)
-        return List.of("Search result 1", "Search result 2");
-    }
 }
-
